# torchpsort

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/: notebook.ipynb
src/torchpsort/: __init__.py  isotonic.py  ops.py
src/torchpsort/isotonic/: __init__.py  backward.py  forward.py
src/torchpuresort/: isotonic.py  ops.py
tests/: test_isotonic.py  test_ops.py
